Fix Scene3D initialization in QQuickWidget

Scene3D can now be used inside a QQuickWidget. There are some
remaining problems, most notably an assert when exiting, but at
least the scene shows up now.

Task-number: QTBUG-52132
Change-Id: Ifc05d859711f5f42342e111c1d7cbea7ba373552
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>